# api/router.go
@@ -15,6 +15,7 @@ func NewTaskRouter(handler Handler, middlewares ...middleware.Middleware) http.H
 	router.HandleFunc("GET /tasks/{id}", handler.Get)
 	router.HandleFunc("PUT /tasks/{id}", handler.Update)
 	router.HandleFunc("DELETE /tasks/{id}", handler.Delete)
+	router.HandleFunc("POST /prompts", handler.ProcessPrompt)
 
 	return middleware.Bind(router, middlewares...)
 }
