# docs/swagger/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /
 definitions:
+  api.PromptInput:
+    properties:
+      text:
+        type: string
+    type: object
+  api.PromptResponse:
+    properties:
+      response:
+        type: string
+    type: object
   api.Task:
     properties:
       createdAt:
@@ -57,6 +67,28 @@ info:
   title: Task Master
   version: "1.0"
 paths:
+  /prompts:
+    post:
+      consumes:
+      - application/json
+      description: Process a natural language prompt for task management
+      parameters:
+      - description: Prompt input
+        in: body
+        name: prompt
+        required: true
+        schema:
+          $ref: '#/definitions/api.PromptInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.PromptResponse'
+      summary: Process Task Prompt
+      tags:
+      - prompts
   /tasks:
     get:
       description: List all tasks
